# bsa

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  README.tpl
.github/: CODEOWNERS
.github/workflows/: continuous-integration.yml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: parse_archive.rs
src/: archive.rs  error.rs  lib.rs  parser.rs
src/parser/: ba2.rs  bsa.rs  fallout4.rs  mod.rs  morrowind.rs  oblivion.rs
tests/: smoke.rs
tests/assets/: hello-world-fo3.bsa  hello-world-fo4.ba2  hello-world-tes3.bsa  hello-world-tes4.bsa  hello-world-tes5se.bsa  hello_world.ba2  hello_world.bsa
