[package]
name = "bsa"
version = "0.1.0"
description = "A library for manipulating Bethesda Softworks Archive (`.bsa`, `.ba2`) files"
authors = ["Chris Kay <chris@cjkay.com>"]

keywords = ["archive", "bethesda", "softworks", "bsa", "ba2"]
categories = ["compression", "encoding", "game-engines", "parser-implementations"]

edition = "2018"
repository = "https://github.com/CJKay/bsa"

license = "MIT"
readme = "README.md"

[dependencies]
derive_more = "0.15"
failure = "0.1"
nom = "5.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.8"

[badges]
codecov = { repository = "CJKay/bsa" }
is-it-maintained-issue-resolution = { repository = "CJKay/bsa" }
is-it-maintained-open-issues = { repository = "CJKay/bsa" }
maintenance = { status = "actively-developed" }
